# thrive_well

./: .env  .gitignore  .pre-commit-config.yaml  Procfile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  create-test-cases.md  devops.md  devops_issue.md  documentaion-request.md  documentation_request.md  feature.md  feature_request.md  refactoring-task.md  refactoring.md  test_issue.md
.github/workflows/: close_issue_on_merge.yml  create_branch.yml
application/: app.py  app_factory.py  config.py  forms.py  logger.py
application/API_utils/: google_custom_search.py
application/RAG_utils/: google_custom_search.py  support_promt_info.json
application/db/: models.py  schema.sql  thrive-well.sql  transfer_local_remote_postgres_schema.py
application/db/migrations/: alembic.ini  env.py
application/db/migrations/versions/: 1ac056f1bcd1_replace_chat_history_with_chat_summary.py  22d62371994e_fix_users_to_logn_tracking.py  2b68240d181b_add_created_on_to_users_table.py  35a664068ee1_renaming_chathistory_to_chat_summary.py  3c68a4545070_create_chat_history.py  3c68bf94ab6c_remove_vector.py  419086000360_add_google_id_to_users_table.py  452f717e13e8_initial_migration_with_chat_summary.py  45d418790c72_create_chat_history.py  46f06825b37f_create_chat_history.py  5240098bce48_fix_embeddings_table_to_use_user_id.py  533907df8b0f_create_chat_history.py  5521b9da2e17_added_table_for_embeddings.py  57e98a80c677_changed_column_to_vectors_for_embeddings.py  61139f5968d4_removed_mood_added_json_colum_for_asi_.py  640c705f2995_fix_foreign_key_reference_in_vector_.py  6960772d9f80_create_chat_history.py  7281b36940b2_add_medication_table_with_side_effects.py  7649f20c80f0_.py  7a74e771c992_create_chat_history.py  7b8bc7b56b24_initial_migration.py  89504e98adde_create_chat_history.py  9ab9334420ed_create_chat_history.py  9e8b754f08ef_add_journal_entry_column_in_journal_db_.py  a5468d256c59_create_chat_history.py  af079374b327_renaming_table_to_chat_summary_and_.py  b2b1097f7ec6_remove_pgvector.py  d0c87e46c883_renaming_chathistory_to_chat_summary.py  d1b980b6f289_create_chat_history.py  d2744f719c94_create_chat_history.py  d63c9fd09210_manual_update_for_chat_summary.py  dbebfd415efb_add_response_entry_column_in_journal_db_.py  e18dfcb0e3dc_fix_users_to_include_hashed_password.py  e354afbf55c0_initial_migration.py  edb5ed1d5101_add_response_entry_column_in_journal_db_.py  f4fd6383755a_fix_embeddings_vector_size_to_384.py  fffda80e3f2d_replace_chat_history_with_chat_summary.py
application/langgraph_interface/: langchain_handler.py  structured_outputs.py
application/langgraph_interface/tools/: __init__.py  calendar_event_tool.py  open_weather_map.py  open_weather_map_tool.py  tavily_search_tool.py  wikipedia_tool.py
application/static/: styles.css
application/templates/: base.html  chat.html  index.html  journal.html  login.html  login_logout_nav.html  navbar.html  profile.html  register.html
application/utils/: ai_base_class.py  ai_comparison.py  anthropic_ai_handler.py  chatbot.py  db_handler.py  extensions.py  fda_drug_reactions.py  gemeni_ai_handler.py  gemini_ai_handler.py  google_custom_search.py  groq_ai_handler.py  guidelines.json  langchain_handler.py  open_ai_handler.py  structured_outputs.py  temp.py
application/views/: auth_views.py  chat_view.py  generate_views.py  main_views.py  user_views.py
documentation/: database_schematics.md
tests/: test_auth.py
