[project]
name = "thrive-well"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.15.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "authlib==1.5.1",
    "beautifulsoup4==4.13.3",
    "blinker==1.9.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "coverage==7.6.12",
    "cryptography==44.0.2",
    "distro==1.9.0",
    "dominate==2.9.1",
    "email-validator==2.2.0",
    "flask==3.1.0",
    "flask-bootstrap==3.3.7.1",
    "flask-login==0.6.3",
    "flask-mail==0.10.0",
    "flask-migrate==4.1.0",
    "flask-session==0.8.0",
    "flask-sqlalchemy==3.1.1",
    "flask-testing==0.8.1",
    "flask-wtf==1.2.2",
    "geojson==2.5.0",
    "google==3.0.0",
    "google-auth==2.38.0",
    "google-genai==1.5.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.20",
    "langchain-community==0.3.19",
    "langchain-core==0.3.44",
    "langchain-openai==0.3.8",
    "langchain-text-splitters==0.3.6",
    "langgraph==0.3.7",
    "langgraph-checkpoint==2.0.19",
    "langgraph-prebuilt==0.1.3",
    "langgraph-sdk==0.1.56",
    "langsmith==0.3.13",
    "mako==1.3.9",
    "markupsafe==3.0.2",
    "msgpack==1.1.0",
    "numpy==2.2.3",
    "openai==1.66.2",
    "orjson==3.10.15",
    "packaging==24.2",
    "pgvector==0.3.6",
    "pluggy==1.5.0",
    "poetry-core==2.1.1",
    "pre-commit==4.1.0",
    "psycopg2-binary==2.9.10",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyowm==3.3.0",
    "pysocks==1.7.1",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "pytest-sugar==1.0.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "ruff>=0.11.2",
    "setuptools==76.0.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.39",
    "tavily-python==0.5.1",
    "tenacity==9.0.0",
    "termcolor==2.5.0",
    "tiktoken==0.9.0",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "virtualenv==20.29.3",
    "visitor==0.1.3",
    "werkzeug==3.1.3",
    "wikipedia==1.4.0",
    "wtforms==3.2.1",
    "zstandard==0.23.0",
]
